FindBugs bugs report #3